[package]
name = "ethrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {  version = "2.0",features = ["abigen", "ws", "rustls", "ethers-solc"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6"

